runtime/gen/basis-ffi.sml

val lt = _import "WordU8_lt" private : Word8.t * Word8.t -> Bool.t;
val mul = _import "WordU8_mul" private : Word8.t * Word8.t -> Word8.t;
val mulCheckOverflows = _import "WordU8_mulCheckOverflows" private : Word8.t * Word8.t -> Bool.t;
val quot = _import "WordU8_quot" private : Word8.t * Word8.t -> Word8.t;
val rem = _import "WordU8_rem" private : Word8.t * Word8.t -> Word8.t;
val rndToReal32 = _import "WordU8_rndToReal32" private : Word8.t -> Real32.t;
val rndToReal64 = _import "WordU8_rndToReal64" private : Word8.t -> Real64.t;
val rshift = _import "WordU8_rshift" private : Word8.t * Word32.t -> Word8.t;
end
end
end
